--- a/index.html
+++ b/index.html
@@ -12,50 +12,39 @@
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
-        <style>
-            body { padding-top: 60px; padding-bottom: 40px; }
-        </style>
         <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="css/main.css">
-
-        <style>
-            .dashboard-container { border: 2px solid #999; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;  }
-            .container-header { height: 23px; text-align: center; font-weight: bold; border-bottom: 2px solid #999; padding-top: 5px; }
-            .container-body { padding: 10px; min-height:500px; }
-
-            #backlog-header { background-color: #ac5150; }
-            #current-header { background-color: #4985a6; }
-            #features-header { background-color: #ec9749; }
-            #ideas-header { background-color: #999; }
-            #completed-header { background-color: #56844e; }
-            button.close { border: 1px solid #444; margin-right: 5px; opacity: .4; line-height: 15px; padding: 0 3px 3px 3px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;}
-            button.close:hover { border: 1px solid #222; opacity: .6; }
-            .header-title { font-weight: bold; }
-        </style>
-
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
-
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
-                <div class="container">
+                <div class="container-fluid">
                     <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="#">Project name</a>
+                    <a class="brand" href="#">Metaintellect <span class="brand-color">Aeon</span></a>
                     <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                        <ul class="nav pull-right">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">All Projects</a></li>
+                                    <li><a href="#">Create new Project</a></li>
+                                    <li class="divider"></li>
+                                    <li class="nav-header">Projects</li>
+                                    <li><a href="#">aeon</a></li>
+                                    <li><a href="#">mi-guest</a></li>
+                                </ul>
+                            </li>
+                            <li class="active"><a href="#about">Dashboard</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Kornelije Sajler <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Profile</a></li>
+                                    <li><a href="#">Settings</a></li>
                                     <li><a href="#">Something else here</a></li>
                                     <li class="divider"></li>
                                     <li class="nav-header">Nav header</li>
@@ -63,20 +52,14 @@
                                     <li><a href="#">One more separated link</a></li>
                                 </ul>
                             </li>
+                            <li><a href="#">Sign Out</a></li>
                         </ul>
-                        <form class="navbar-form pull-right">
-                            <input class="span2" type="text" placeholder="Email">
-                            <input class="span2" type="password" placeholder="Password">
-                            <button type="submit" class="btn">Sign in</button>
-                        </form>
                     </div><!--/.nav-collapse -->
                 </div>
             </div>
         </div>
 
         <div id="content" class="container-fluid">
-
-            <!-- Example row of columns -->
             <div class="row-fluid">
                 <ul id="dashboard">
                     <li id="backlog">
