Created style for Footer, and added meaningful footer content in index page. Setting vertical button has a new colors

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <hr>
 
             <footer>
-                <p>&copy; Company 2012</p>
+                <p>To Infinity and Beyond &copy; 2013 <a href="http://metaintellect.com" title="Metaintellect official site." target="_blank">Metaintellect</a> by <a href="http://learnaholic.me" title="Official Blog site." target="_blank">Kornelije Sajler</a>.</p>
             </footer>
 
         </div> <!-- /container -->
