--- a/index.html
+++ b/index.html
@@ -54,17 +54,26 @@
                             </li>
                             <li><a href="#">Sign Out</a></li>
                         </ul>
-                    </div><!--/.nav-collapse -->
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div id="content" class="container-fluid">
+
+        <div id="content" class="container-fluid left-padding">
+
+            <div id="command-area">
+                    <button class="btn btn-primary pull-left" type="button"><i class="icon-plus icon-white"></i> Add Requirement</button>
+                    <form class="navbar-search pull-right">
+                      <input type="text" class="search-query" placeholder="Search">
+                    </form>
+            </div>
+
             <div class="row-fluid">
                 <ul id="dashboard">
                     <li id="backlog">
                         <div class="dashboard-container">
-                            <div id="backlog-header" class="container-header">
+                            <div class="container-header backlog-color">
                                 <span class="header-title">Backlog</span><button value="backlog" class="close">&times;</button>
                             </div>
                             <div class="container-body">
@@ -72,10 +81,10 @@
                             </div>
                          </div>
                     </li>
-                    <li id="current">
+                    <li id="active">
                         <div class="dashboard-container">
-                            <div id="current-header" class="container-header">
-                                <span class="header-title">Current</span><button value="current" class="close">&times;</button>
+                            <div class="container-header active-color">
+                                <span class="header-title">Active</span><button value="active" class="close">&times;</button>
                             </div>
                             <div class="container-body">
                                 Some content....
@@ -84,7 +93,7 @@
                     </li>
                     <li id="features">
                         <div class="dashboard-container">
-                            <div id="features-header" class="container-header">
+                            <div class="container-header features-color">
                                 <span class="header-title">Features</span><button value="features" class="close">&times;</button>
                             </div>
                             <div class="container-body">
@@ -94,8 +103,8 @@
                     </li>
                     <li id="ideas">
                         <div class="dashboard-container">
-                            <div id="ideas-header" class="container-header">
-                                <span class="header-title">Ideas</span><button value="ideas" class="close">&times;</button>
+                            <div class="container-header ideas-color">
+                                <span class="header-title">Misc. Ideas</span><button value="ideas" class="close">&times;</button>
                             </div>
                             <div class="container-body">
                                 Some content....
@@ -104,7 +113,7 @@
                     </li>
                     <li id="completed">
                         <div class="dashboard-container">
-                            <div id="completed-header" class="container-header">
+                            <div class="container-header completed-color">
                                 <span class="header-title">Completed</span><button value="completed" class="close">&times;</button>
                             </div>
                             <div class="container-body">
@@ -127,9 +136,9 @@
             <div id="settings">
                 <h4>Dashboard View Settings</h4>
                 <label class="checkbox"><input type="checkbox" name="containers" value="backlog">Backlog</label>
-                <label class="checkbox"><input type="checkbox" name="containers" value="current">Current</label>
+                <label class="checkbox"><input type="checkbox" name="containers" value="active">Active</label>
                 <label class="checkbox"><input type="checkbox" name="containers" value="features">Features</label>
-                <label class="checkbox"><input type="checkbox" name="containers" value="ideas">Ideas</label>
+                <label class="checkbox"><input type="checkbox" name="containers" value="ideas">Misc. Ideas</label>
                 <label class="checkbox"><input type="checkbox" name="containers" value="completed">Compeleted</label>
             </div>
 
