Added Labels with colors to Dashboard View Settings for each checkbox. Added new screenshot for rev. 1 of prototype, updated README.

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
         <div id="dashboard-settings">
             <div id="settings">
                 <h4>Dashboard View Settings</h4>
-                <label class="checkbox"><input type="checkbox" name="containers" value="backlog">Backlog</label>
-                <label class="checkbox"><input type="checkbox" name="containers" value="active">Active</label>
-                <label class="checkbox"><input type="checkbox" name="containers" value="features">Features</label>
-                <label class="checkbox"><input type="checkbox" name="containers" value="ideas">Misc. Ideas</label>
-                <label class="checkbox"><input type="checkbox" name="containers" value="completed">Compeleted</label>
+                <label class="checkbox"><input type="checkbox" name="containers" value="backlog"><span class="label label-important">Backlog</span></label>
+                <label class="checkbox"><input type="checkbox" name="containers" value="active"><span class="label label-info">Active</span></label>
+                <label class="checkbox"><input type="checkbox" name="containers" value="features"><span class="label label-warning">Features</span></label>
+                <label class="checkbox"><input type="checkbox" name="containers" value="ideas"><span class="label">Misc. Ideas</span></label>
+                <label class="checkbox"><input type="checkbox" name="containers" value="completed"><span class="label label-success">Completed</span></label>
             </div>
 
             <a href="#" class="pull_dashboard-settings" title="Click to view Dashboard View Settings"><div class="rotate">Settings</div></a>
